// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle component #render render default 1`] = `
"<Panel size=\\"small\\" contentClassName=\\"titleWrap\\" title={false} loading={false} accordion={false} open={true} highlight=\\"shadow\\">
  <h1 className=\\"title\\">
    título do header
  </h1>
</Panel>"
`;

exports[`PageTitle component #render render with side content 1`] = `
"<Panel size=\\"small\\" contentClassName=\\"titleWrap\\" title={false} loading={false} accordion={false} open={true} highlight=\\"shadow\\">
  <h1 className=\\"title\\">
    título do header
  </h1>
  <div>
    <div>
      Elemento da lateral
    </div>
  </div>
</Panel>"
`;
